BioFabric can now update selection in Cytoscape view and tables